Fix blog images on mobile vies

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -450,7 +450,7 @@ body {
   .content-formatted .form_field_file {
     width: 100%;
   }
-  .public .content-formatted .edy-positionable-container-maxwidth, .blog-page .content-formatted .edy-positionable-container-maxwidth {
+  .public .post .content-formatted .edy-positionable-container-maxwidth {
     width: auto !important;
     max-width: none !important;
     margin-right: 0 !important;
